--- a/primera_práctica.ipynb
+++ b/primera_práctica.ipynb
@@ -61,23 +61,8 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Things to add to the EDA:\n",
-        "- Distribution graphs\n",
-        "- Outlier detection and analysis\n",
-        "- Covariance\n",
-        "- Median, min, max, and average of important attributes\n",
-        "\n",
-        "We can always keep adding more to this later."
-      ],
-      "metadata": {
-        "id": "5M_KzDhv1Ea-"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +421,7 @@
         "id": "xrY_pNyvDrnq",
         "outputId": "dbf2cffa-dc26-4a8d-92e5-e5c8fc8f25d2"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +505,7 @@
         "id": "sgmI9cM51cXB",
         "outputId": "500307e5-aac6-4f5a-bcd9-2fade4cb7425"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +575,7 @@
       "metadata": {
         "id": "tfuFQU2rvbVD"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,7 +680,7 @@
         },
         "outputId": "9911a114-c237-4196-ec5d-72d074e95bb7"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +761,7 @@
         "id": "0epr0oak_LIa",
         "outputId": "90dec3b9-bc38-4cae-9390-16decb5b13ed"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,6 +789,15 @@
       ],
       "metadata": {
         "id": "vwCPS5j242qu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "También tenemos que considerar el costo computacional de realizar HPO. En este caso, podemos calcular el tiempo de entrenamiento. Para los hiperparámetros predeterminados, el tiempo es 0.0628 segundos, pero para entrenar el modelo con HPO, el tiempi es 4.1542 seconds. ¡Esto es 66 veces más largo! Sin embargo, HPO es importnate en este caso porque el modelo era un sobreajuste sin HPO."
+      ],
+      "metadata": {
+        "id": "C3T_JE0Deib5"
       }
     },
     {
@@ -881,7 +875,7 @@
         "id": "R6fPqUAbwwD9",
         "outputId": "b12c88d5-e618-44bd-dbdd-2e3d5d4e62d9"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,7 +925,7 @@
         "id": "0A9LhyhBjiPU",
         "outputId": "9e3297dc-8aac-4762-d798-24d7d33b5e87"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,7 +991,7 @@
         "\n",
         "Hay does tipos de modelos lineales que vamos a usar: regresión logística sin regularización y regresión logística de lasso con regularización L1. La diferencia principal es que sin regularización no tiene un castigo para los coeficientes grandes. Como resultado, es un poco más probable que se sobreajuste. Por otro lado, regresión logística de lasso tiene un castigo de L1, lo que conduce a la seleción de los atributos.\n",
         "\n",
-        "Por último, realizamos la evaluación de inner antes de HPO y analizamos las métricas de accuracy."
+        "Vamos a realizar la evaluación de inner antes de HPO y analizamos las métricas de accuracy."
       ],
       "metadata": {
         "id": "ZnQJ5z2vzpow"
@@ -1082,7 +1076,7 @@
         "id": "FnSBN9wlHGQ5",
         "outputId": "9f1c1399-e18b-48d3-b1f5-ff7f9c5b4e9b"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,7 +1130,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Estas matrices de confusión muestran una gran discrepencia entre TPR y TNR que signfica que el modelo puede categorizar correctamente los casos negativas mucho más que los casos positivos. Esto tiene sentido porque hay muchas más casos negativos, pero no es muy bien para el rendimiento general del modelo."
+        "Estas matrices de confusión muestran una gran discrepencia entre TPR y TNR que signfica que el modelo puede categorizar correctamente los casos negativas mucho más que los casos positivos. Esto tiene sentido porque hay muchas más casos negativos, pero no es muy bien para el rendimiento general del modelo en el futuro."
       ],
       "metadata": {
         "id": "oFjFdOs2Qcel"
@@ -1200,7 +1194,7 @@
         "id": "2bMtBGfhIjBV",
         "outputId": "b3bac1b6-6ea3-40a4-e61c-4f2170bc674d"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,6 +1273,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Podemos ver los tiempos de entrenamiento también para ganar más información del costo computacional. Para los hiperparámetros predeterminados, el tiempo de correr es 0.0372 segundos para la regresión logística sin regularización y 0.0434 segundos para la regresión logística con regularización L1. Por otro lado, con HPO el tiempo de correr es 6.266 segundos y 2.2329 segundos respectivamente (que es mucho más largo que antes). Está claro que el costo computacional es muy grande pero al final no hay cambios reales de accuracy."
+      ],
+      "metadata": {
+        "id": "s4LKoPb4lx-Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Un aspeto critical de la regresión logística con regularización L1 es la importancia de los atributos. Lasso en particular tiene un castigo que cambia muchos de los atributos irrelevantes a 0. Podemos ver los atributos más importantes de los dos tipos de regresión logística."
       ],
       "metadata": {
@@ -1341,7 +1344,7 @@
         "id": "kBid1TGFSE2F",
         "outputId": "01a6e0d7-9aa4-40ee-a485-2398fd177085"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1385,7 +1388,7 @@
         "id": "Ztx-IDa5melH",
         "outputId": "7698bddc-988c-45f1-d14b-126f41741daf"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,7 +1498,7 @@
         "id": "opiv6wc7n-1u",
         "outputId": "244d1fb7-b917-4d23-a008-6aecb2e8ecfd"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1553,7 +1556,7 @@
         "id": "Oe4x239NoHlb",
         "outputId": "bdc9278a-bfc9-48e6-f5f5-50404d72a0d2"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1605,6 +1608,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "En resumen, según las métricas de accuracy, parece que el modelo de los árboles es mejor que el modelo de regresión logística. No hay una gran diferencia entre los overall accuracies (88.06% para los árboles, 85.41% para la regresión logística sin regularización, y 85.92% para la regresión logística con regularización L1). Sin embargo, aprendimos que balanced accuracy es un poco más fiable para evaluar problemas desbalceados. Además, la diferencia entre los balanced accuracies es aún más grande (75.76% para los árboles, 59.86% para la regresión logística sin regularización, y 59.14% para la regresión logística con regularización L1).\n",
+        "\n",
+        "La causa principal de esta diferencia es el hecho de que el TPR del modelo de árboles es mucho más alto que el TPR de los modelos de regresión logística (57.59% en comparación con 22.15% y 19.62%). En otras palabras, las regresiones logísticas realizan peor que el azar para los casos positivos. Es importante que pensemos en el modelo que puede detectar casos positivos y esto es algo que las regresiones logísticas se faltan mucho. Por lo tanto, está claro que los árboles realizan la tarea con más fiabilidad."
+      ],
+      "metadata": {
+        "id": "GajQSyJbaOj4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Tarea de Elección Abierta"
       ],
       "metadata": {
@@ -1614,7 +1628,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest: Elegimos este modelo para nuestra tarea de elección abierta porque Random Forest es una buena opcion para evitar \"overfitting,\" que es un problema que enfrentamos mucho a través de la práctica."
+        "Random Forest: Elegimos este modelo para nuestra tarea de elección abierta porque Random Forest es una buena opcion para evitar el sobreajuste que es un problema que enfrentamos mucho a través de la práctica."
       ],
       "metadata": {
         "id": "UXBJEM4y9ENK"
@@ -1686,7 +1700,7 @@
         "id": "jmaTWWFO7Bhb",
         "outputId": "eea548c4-72a2-40fd-ef5d-b8f65da3f2fb"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1741,7 +1755,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Una gran contribución de la IA en esta práctica es la herramienta de \"dubugging\" que oferece."
+        "Una gran contribución de la IA en esta práctica es la herramienta de \"dubugging\" que oferece. Por ejemplo, la IA nos ayudó a reconocer cuándo encontramos discrepancias de tipos de datos que se resolvieron fácilmente mediante la conversión a tipos compatibles. También editamos muchas de las respuestas de la IA. Por ejemplo, quería generar un gráfico específico para ayudar a visualizar las diferentes combinaciones de hiperparámetros para los árboles. A veces, la IA da respuestas muy poco claras o gráficos que son difíciles de interpretar, pero pudimos trabajar con ella para refinar el gráfico y proporcionarnos información más significativa y fácil de usar."
       ],
       "metadata": {
         "id": "BqQzcNmVacNI"
